test/fail/string0char.min
program
	string s
start
	s := '\0';
end
